SERVER-50453 Handle NSS renaming when checking shard version in drop collection